Fixups on formatting and tests